# rusty-chat

./: Cargo.toml  README.md
.github/workflows/: build_and_test.yml  check_version_bump.yml  deploy.yml  deploy_prerelease.yml  deploy_release.yml
src/: client.rs  common.rs  lib.rs  main.rs  server.rs
src/client/: args.rs
src/common/: cancellation_token.rs  cli.rs  message_stream.rs  protocol.rs  threading.rs
src/common/cancellation_token/: cancellation_token.rs  cancellation_token_source.rs  error.rs
src/common/cli/: command.rs  command_handler.rs  command_handler_builder.rs
src/common/message_stream/: error.rs
src/common/protocol/: client.rs  error.rs  message.rs  packet.rs  serializable.rs  server.rs
src/common/protocol/client/: error.rs  handshake.rs  message.rs
src/common/protocol/client/message/: authenticate.rs  chat.rs  end.rs
src/common/protocol/error/: handshake.rs  handshake_error.rs  message_parse.rs
src/common/protocol/handshake/: client.rs  server.rs
src/common/protocol/message/: client.rs  server.rs
src/common/protocol/packet/: client.rs  server.rs
src/common/protocol/packet/client/: authenticate.rs  chat.rs  end.rs
src/common/protocol/packet/server/: authenticated.rs  chat.rs  end.rs
src/common/protocol/server/: error.rs  handshake.rs  message.rs
src/common/protocol/server/message/: authenticated.rs  chat.rs  end.rs
src/common/threading/: cancellation_token.rs  cancellation_token_source.rs  error.rs
src/server/: args.rs  client_handle.rs  client_handler.rs
src/server/command/: exit.rs
